@@ -2,6 +2,10 @@ Revision history for Perl extension Teng-Plugin-RowObjectCreationSwitcher
 
 {{$NEXT}}
 
+    - incompatible changes
+       - rename methods : enable/disable_row_object -> temporary_suppress_object_creation_guard
+       - raise error if guard object is not received
+
 0.01 2013-09-30T15:54:22Z
 
     - original version
